--- a/Movie_Web/select.html
+++ b/Movie_Web/select.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<title>Title</title>
+	<link href="css/select.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="buttons/buttons.css"/>
+	<script language="JavaScript" src="js/select.js"></script>
 </head>
 <body>
-    <div class="top">
-        <div class="left">
-            <img src="image/5.jpg">
-        </div>
-        <div class="right">
-            <h1>购票</h1>
-        </div>
-    </div>
+<div>
+	<div class="top">
+		<div class="left">
+			<img src="image/5.jpg">
+		</div>
+		<div class="right">
+			<h1>购票</h1>
+		</div>
+	</div>
+	<HR style="border:1px dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+	<div class="middle">
+        <span class="m1">
+            <a href="#" class="button blue medium">五月四日</a>
+        </span>
+        <span class="m2">
+            <a href="#" class="button blue medium">五月五日</a>
+        </span>
+        <span class="m3">
+            <a href="#" class="button blue medium">五月六日</a>
+        </span>
+        <span class="m4">
+            <a href="#" class="button blue medium">五月七日</a>
+        </span>
+	</div>
+	<HR style="border:1px dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+	<div class="bottom">
+		<div class="th">
+			<span class="t1">放映时间</span>
+			<span class="t2">语言版本</span>
+			<span class="t3">放映厅</span>
+			<span class="t4">票价</span>
+			<span class="t5">优惠</span>
+			<span class="t6">选座购票</span>
+		</div>
+		<HR style="FILTER: progid:DXImageTransform.Microsoft.Shadow(color:#987cb9,direction:145,strength:15)" width="80%" color=#987cb9 SIZE=1>
+		<div class="table">
+			<div class="time"><strong>10:00</strong><br/><em>11:20散场</em></div>
+			<div class="language"><strong>国语</strong><br/><em>3D</em></div>
+			<div class="room"><strong>三号厅</strong></div>
+			<div class="price"><strong>18.00元</strong></div>
+			<div class="preferential"><strong>学生半价</strong></div>
+			<div class="select"><a href="#" class="button small orange">优惠购票</a></div>
+		</div>
 </body>
 </html>
