--- a/Movie_Web/select.html
+++ b/Movie_Web/select.html
@@ -51,5 +51,23 @@
 			<div class="preferential"><strong>学生半价</strong></div>
 			<div class="select"><a href="#" class="button small orange">优惠购票</a></div>
 		</div>
+		<HR style="FILTER: progid:DXImageTransform.Microsoft.Shadow(color:#987cb9,direction:145,strength:15)" width="80%" color=#987cb9 SIZE=1>
+		<div class="table">
+			<div class="time"><strong>11:00</strong><br/><em>11:20散场</em></div>
+			<div class="language"><strong>国语</strong><br/><em>3D</em></div>
+			<div class="room"><strong>一号厅</strong></div>
+			<div class="price"><strong>18.00元</strong></div>
+			<div class="preferential"><strong>学生半价</strong></div>
+			<div class="select"><a href="#" class="button small orange">优惠购票</a></div>
+		</div>
+		<HR style="FILTER: progid:DXImageTransform.Microsoft.Shadow(color:#987cb9,direction:145,strength:15)" width="80%" color=#987cb9 SIZE=1>
+		<div class="table">
+			<div class="time"><strong>12:00</strong><br/><em>11:20散场</em></div>
+			<div class="language"><strong>国语</strong><br/><em>3D</em></div>
+			<div class="room"><strong>一号厅</strong></div>
+			<div class="price"><strong>18.00元</strong></div>
+			<div class="preferential"><strong>学生半价</strong></div>
+			<div class="select"><a href="#" class="button small orange">优惠购票</a></div>
+		</div>
 </body>
 </html>
