--- a/YWL/about.html
+++ b/YWL/about.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+﻿<!DOCTYPE HTML>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,24 +9,6 @@
     <link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css" media="screen"/>
     <script type="text/javascript" src="js/lanrenzhijia.js"></script>
     <script src="js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
-    <style type="text/css">
-        .iw_poi_title {
-            color: #CC5522;
-            font-size: 14px;
-            font-weight: bold;
-            overflow: hidden;
-            padding-right: 13px;
-            white-space: nowrap
-        }
-
-        .iw_poi_content {
-            font: 12px arial, sans-serif;
-            overflow: visible;
-            padding-top: 4px;
-            white-space: -moz-pre-wrap;
-            word-wrap: break-word
-        }
-    </style>
 </head>
 
 <body>
