--- a/YWL/index.html
+++ b/YWL/index.html
@@ -11,12 +11,14 @@
     <script src="js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
 </head>
 <body>
+
+<!-- 头部-->
 <div class="top">
     <div class="wt1002">
         <div class="r">
             <div class="toplink">
                 <a href="" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('');">设为首页</a> |
-                <a href="javascript:window.external.AddFavorite('','养老院')">加入收藏</a>
+                <a href="javascript:window.external.AddFavorite('','益未来')">加入收藏</a>
             </div>
             <div class="topsearch">
                 <form action="" method="post" id="form1">
@@ -26,34 +28,42 @@
             </div>
         </div>
         <div class="l">
-            <a href="/" title="养老院"><img src="images/logo.jpg"/></a>
+            <a href="#" title="益未来"><img src="images/logo.gif"/></a>
         </div>
         <div class="clear"></div>
     </div>
 </div>
+<!-- 头部 结束-->
+
+
+<!--导航栏-->
 <div class="menu">
     <div class="wt1002">
         <ul id="ulMenu">
             <li><a href="index.html">首页</a></li>
-            <li><a href="about.html">关于我们</a></li>
             <li><a href="list.html">新闻动态</a></li>
-            <li><a href="prolist.html">环境设施</a></li>
-            <li><a href="list.html">多彩生活</a></li>
-            <li><a href="list.html">养老养身</a></li>
+            <li><a href="list.html">专题活动</a></li>
+            <li><a href="prolist.html">公益招募</a></li>
+            <li><a href="list.html">乐捐</a></li>
+            <li><a href="about.html">关于我们</a></li>
             <li><a href="list.html">联系我们</a></li>
         </ul>
     </div>
 </div>
+<!--导航栏结束-->
+
+<!--焦点图-->
 <div class="wt1002">
     <div id="full-screen-slider">
         <ul id="slides">
-            <li style="background:url('images/1.jpg') no-repeat center top"><a href="/">关爱老人 关注夕阳</a></li>
-            <li style="background:url('images/2.jpg') no-repeat center top"><a href="/">人生都有夕阳红 尊老敬老树新风</a></li>
-            <li style="background:url('images/3.jpg') no-repeat center top"><a href="/">老有所养</a></li>
+            <li style="background:url('images/1.jpg') no-repeat center top"><a href="/">益未来-公益创造美好未来</a></li>
+            <li style="background:url('images/2.jpg') no-repeat center top"><a href="/">公益，让未来更美好</a></li>
+            <li style="background:url('images/3.jpg') no-repeat center top"><a href="/">用爱心，致未来</a></li>
         </ul>
     </div>
 </div>
-<div class="clear"></div>
+<!--焦点图结束-->
+
 
 
 <div class="wt1002 fwmain">
@@ -73,7 +83,7 @@
         </div>
         <div class="right_List mTop10">
             <div class="label_head">
-                <div class="label_title"><a href="">养老养身</a></div>
+                <div class="label_title"><a href="">爱心榜</a></div>
             </div>
             <ul class="label_pad mTop10">
                 <li><a href="newsview.html" class="s">关爱老人 关注夕阳</a></li>
@@ -89,7 +99,7 @@
                 <div class="label_title">联系我们</div>
             </div>
             <ul class="label_pad mTop10">
-                <div>地 址：XX市XX路XX号10楼</div>
+                <div>地 址：西安市长安区西安邮电大学长安校区西区</div>
                 <div>电 话：000-000000</div>
                 <div>传 真：000-000000</div>
                 <div>邮 箱：123456@XX.com</div>
@@ -126,12 +136,10 @@
         </script>
         <div class="index_abouts r label">
             <div class="label_head">
-                <div class="label_title">中心简介</div>
+                <div class="label_title">益未来团队简介</div>
             </div>
             <div class="label_content">
-                <p>
-                    中国农村乡镇普遍办了敬老院；城市街道也有兴办敬老院的。敬老院的收养对象主要是五保老人，有条件的敬老院还接收享受退休金待遇的自费老人。坚持入院自愿、出院自由的原则。许多地区还为优抚对象的孤老兴办光荣院，吸收符合条件的对象入院。敬老院贯彻集体事业集体办的原则...<a
-                        href="about.html">[ 更多 ]</a>。</p>
+                <p>我们来自西安邮电大学，隶属不同学院多个专业，有不同专业知识背景，具有一定的管理学，市场营销以及计算机等方面的基础知识。我们是有责任心有上进心，有毅力有决心，是具有创新意识的朝气蓬勃的大学生。团队现有6名成员，分别来自西邮通院，电院，计院和经管院，因为公益，让我们聚在了一起，因为未来，让我们携手同行。我相信，在我们的努力下，未来，将会更加美好！<a href="about.html">[ 更多 ]</a>。</p>
             </div>
         </div>
         <div class="clear"></div>
@@ -149,7 +157,7 @@
         </div>
         <div class="index_pro mTop10 mLeft10 l label">
             <div class="label_head">
-                <div class="label_title"><a href="list.html" class="more">更多</a>多彩生活</div>
+                <div class="label_title"><a href="list.html" class="more">更多</a>专题活动</div>
             </div>
             <ul class="label_pad">
                 <li><span>2016-04-27</span><a href="newsview.html">中投全球国际养老院鞍山启动</a></li>
@@ -161,7 +169,7 @@
         </div>
         <div class="index_img mTop10 l label">
             <div class="label_head">
-                <div class="label_title"><a href="prolist.html" class="more">更多</a>环境设施</div>
+                <div class="label_title"><a href="prolist.html" class="more">更多</a>图说动态</div>
             </div>
             <div id="demox">
                 <div id="demoxList">
@@ -176,14 +184,16 @@
             </div>
         </div>
         <div class="clear"></div>
-    </div><!--left-->
-    <div class="clear"></div>
+    </div>
 </div>
-<div class="clear"></div>
+
+<!--网站页脚-->
 <div class="foot">
     <span>copyright2015-2016 </span>
     <a href="" target="_target" title="Sitemap">网站地图</a>
     <a href="" target="_target" title="后台登录">后台登录</a>
 </div>
+<!--网站页脚 结束-->
+
 </body>
 </html>
