--- a/YWL/index.html
+++ b/YWL/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title></title>
+    <title>益未来</title>
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="bookmark" href="images/favicon.ico"/>
     <link href="css/main.css" rel="stylesheet"/>
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
@@ -17,14 +19,8 @@
     <div class="wt1002">
         <div class="r">
             <div class="toplink">
-                <a href="" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('');">设为首页</a> |
-                <a href="javascript:window.external.AddFavorite('','益未来')">加入收藏</a>
-            </div>
-            <div class="topsearch">
-                <form action="" method="post" id="form1">
-                    <input type="text" value="" class="tetPut" id="searchnew" name="searchnew"/>
-                    <input name="提交" type="submit" class="tetBut" value=""/>
-                </form>
+                <a href="">登录</a> |
+                <a href="">注册</a>
             </div>
         </div>
         <div class="l">
@@ -41,12 +37,12 @@
     <div class="wt1002">
         <ul id="ulMenu">
             <li><a href="index.html">首页</a></li>
-            <li><a href="list.html">新闻动态</a></li>
-            <li><a href="list.html">专题活动</a></li>
-            <li><a href="prolist.html">公益招募</a></li>
-            <li><a href="list.html">乐捐</a></li>
+            <li><a href="news.html">新闻动态</a></li>
+            <li><a href="activity.html">专题活动</a></li>
+            <li><a href="join.html">公益招募</a></li>
+            <li><a href="donate.html">乐捐</a></li>
             <li><a href="about.html">关于我们</a></li>
-            <li><a href="list.html">联系我们</a></li>
+            <li><a href="contact.html">联系我们</a></li>
         </ul>
     </div>
 </div>
@@ -63,6 +59,14 @@
     </div>
 </div>
 <!--焦点图结束-->
+
+<!-- 当前导航栏-->
+<div style="display: none" class="current_name">
+    <p>首页</p>
+</div>
+<!-- 当前导航栏 结束-->
+
+
 
 
 
@@ -185,8 +189,9 @@
         </div>
         <div class="clear"></div>
     </div>
+ <div class="clear"></div>
 </div>
-
+<div class="clear"></div>
 <!--网站页脚-->
 <div class="foot">
     <span>copyright2015-2016 </span>
