--- a/YWL/news.html
+++ b/YWL/news.html
@@ -61,6 +61,13 @@
 <!--焦点图结束-->
 
 
+
+
+<div style="display: none" class="current_name">
+    <p>新闻动态</p>
+</div>
+
+
 <div class="clear"></div>
 <div class="wt1002 fwmain">
 	<div class="fwmain_nright r mTop10">
