--- a/YWL/activity.html
+++ b/YWL/activity.html
@@ -61,11 +61,15 @@
 <!--焦点图结束-->
 
 
+<div style="display: none" class="current_name">
+    <p>专题活动</p>
+</div>
+
 <div class="clear"></div>
 <div class="wt1002 fwmain">
 	<div class="fwmain_nright r mTop10">
     	<div class="label">
-        	<div class="label_head"><div class="label_title">新闻动态</div></div>
+        	<div class="label_head"><div class="label_title">专题活动</div></div>
              <ul class="label_pad mTop10">
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
@@ -103,6 +107,9 @@
     <div class="clear"></div>
 </div>
 <div class="clear"></div>
+
+
+
 <div class="foot">
     <span>copyright2015-2018 某某养老院版权所有</span>
     <a href="" target="_target" title="Sitemap">网站地图</a>
