--- a/YWL/activityview.html
+++ b/YWL/activityview.html
@@ -65,24 +65,23 @@
 <div class="wt1002 fwmain">
 	<div class="fwmain_nright r mTop10">
     	<div class="label">
-        	<div class="label_head"><div class="label_title">新闻动态</div></div>
-             <ul class="label_pad mTop10">
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-            </ul>
-            <div class="clear"></div>
-     		<div class="page">1 2 3 4 ></div>
+        	<div class="label_head"><div class="label_title">新闻内容</div></div>
+            
+            <div class="about_con">
+                <ul class="label_pad">
+                    <li><span>2016-04-27点击数:12作者:未知</span><a href="newsview.html">中投全球国际养老院鞍山启动</a></li>
+                    <li><span>2016-04-27</span><a href="newsview.html">中投全球国际养老院鞍山启动</a></li>
+                    <li><span>2016-04-27</span><a href="newsview.html">中投全球国际养老院鞍山启动</a></li>
+                    <li><span>2016-04-27</span><a href="newsview.html">中投全球国际养老院鞍山启动</a></li>
+                    <li><span>2016-04-27</span><a href="newsview.html">中投全球国际养老院鞍山启动</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="fwmain_nleft l mTop10">
-    	<div class="label_head"><div class="label_title">关于我们</div></div>
+    	<div class="label_head"><div class="label_title">新闻动态</div></div>
     	<div class="label_contents">
-        	<h1><a href="">院所介绍</a></h1>
+          <h1><a href="">院所介绍</a></h1>
             <h1><a href="">院所荣誉</a></h1>
             <h1><a href="">领导介绍</a></h1>
         </div>
@@ -103,6 +102,9 @@
     <div class="clear"></div>
 </div>
 <div class="clear"></div>
+
+
+
 <div class="foot">
     <span>copyright2015-2018 某某养老院版权所有</span>
     <a href="" target="_target" title="Sitemap">网站地图</a>
