--- a/YWL/contact.html
+++ b/YWL/contact.html
@@ -11,8 +11,43 @@
     <link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css" media="screen"/>
     <script type="text/javascript" src="js/lanrenzhijia.js"></script>
     <script src="js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
+    <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp&key=FZ2BZ-2BV3X-SOH4H-7ITUV-7VRPT-RKBAC"></script>
+    <style type="text/css">
+        *{
+            margin:0px;
+            padding:0px;
+        }
+        body, button, input, select, textarea {
+            font: 12px/16px Verdana, Helvetica, Arial, sans-serif;
+        }
+        #info {
+            margin-top: 10px;
+        }
+        #container{
+            min-width:60px;
+            min-height:350px;
+        }
+    </style>
+    <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
+    <script>
+        var init = function() {
+            var center = new qq.maps.LatLng(34.152983,108.900360);
+            var map = new qq.maps.Map(document.getElementById('container'),{
+                center: center,
+                zoom: 13
+            });
+            var infoWin = new qq.maps.InfoWindow({
+                map: map
+            });
+            infoWin.open();
+            //tips  自定义内容
+            infoWin.setContent('<div style="width:40px;padding-top:10px;">'+
+                    '益未来</div>');
+            infoWin.setPosition(center);
+        }
+    </script>
 </head>
-<body>
+<body onload="init()">
 
 <!-- 头部-->
 <div class="top">
@@ -61,48 +96,52 @@
 <!--焦点图结束-->
 
 
+<div style="display: none" class="current_name">
+    <p>联系我们</p>
+</div>
+
 <div class="clear"></div>
 <div class="wt1002 fwmain">
-	<div class="fwmain_nright r mTop10">
-    	<div class="label">
-        	<div class="label_head"><div class="label_title">新闻动态</div></div>
-             <ul class="label_pad mTop10">
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-                <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
-            </ul>
-            <div class="clear"></div>
-     		<div class="page">1 2 3 4 ></div>
+    <div class="fwmain_nright r mTop10">
+        <div class="label">
+            <div class="label_head">
+                <div class="label_title">联系我们</div>
+            </div>
+            <div id="container"></div>
         </div>
     </div>
     <div class="fwmain_nleft l mTop10">
-    	<div class="label_head"><div class="label_title">关于我们</div></div>
-    	<div class="label_contents">
-        	<h1><a href="">院所介绍</a></h1>
+        <div class="label_head">
+            <div class="label_title">联系我们</div>
+        </div>
+        <div class="label_contents">
+            <h1><a href="">院所介绍</a></h1>
             <h1><a href="">院所荣誉</a></h1>
             <h1><a href="">领导介绍</a></h1>
         </div>
-        <div class="label_head mTop10"><div class="label_title">社会关爱</div></div>
-    	<div class="label_contents">
-        <h1><a href="">慈善活动</a></h1><h1><a href="">社会捐助</a></h1>
+        <div class="label_head mTop10">
+            <div class="label_title">社会关爱</div>
         </div>
-        <div class="label_head mTop10"><div class="label_title">联系我们</div></div>
-    	<div class="label_contents">
-        <ul class="label_pad mTop10">
-            	<div>地 址：XX市XX路XX号10楼</div>
-<div>电 话：000-000000</div>
-<div>传 真：000-000000 </div>
-<div>邮 箱：123456@XX.com</div>
+        <div class="label_contents">
+            <h1><a href="">慈善活动</a></h1>
+            <h1><a href="">社会捐助</a></h1>
+        </div>
+        <div class="label_head mTop10">
+            <div class="label_title">联系我们</div>
+        </div>
+        <div class="label_contents">
+            <ul class="label_pad mTop10">
+                <div>地 址：XX市XX路XX号10楼</div>
+                <div>电 话：000-000000</div>
+                <div>传 真：000-000000</div>
+                <div>邮 箱：123456@XX.com</div>
             </ul>
         </div>
     </div>
     <div class="clear"></div>
 </div>
 <div class="clear"></div>
+
 <div class="foot">
     <span>copyright2015-2018 某某养老院版权所有</span>
     <a href="" target="_target" title="Sitemap">网站地图</a>
