--- a/YWL/donate.html
+++ b/YWL/donate.html
@@ -61,11 +61,15 @@
 <!--焦点图结束-->
 
 
+<div style="display: none" class="current_name">
+    <p>乐捐</p>
+</div>
+
 <div class="clear"></div>
 <div class="wt1002 fwmain">
 	<div class="fwmain_nright r mTop10">
     	<div class="label">
-        	<div class="label_head"><div class="label_title">新闻动态</div></div>
+        	<div class="label_head"><div class="label_title">乐捐</div></div>
              <ul class="label_pad mTop10">
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
