--- a/YWL/join.html
+++ b/YWL/join.html
@@ -61,12 +61,17 @@
 <!--焦点图结束-->
 
 
+
+<div style="display: none" class="current_name">
+    <p>专题活动</p>
+</div>
+
 <div class="clear"></div>
 <div class="wt1002 fwmain">
-	<div class="fwmain_nright r mTop10">
-    	<div class="label">
-        	<div class="label_head"><div class="label_title">新闻动态</div></div>
-             <ul class="label_pad mTop10">
+    <div class="fwmain_nright r mTop10">
+        <div class="label">
+            <div class="label_head"><div class="label_title">专题活动</div></div>
+            <ul class="label_pad mTop10">
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
@@ -76,33 +81,26 @@
                 <li><span>2016-5-26</span><a href="newsview.html">全国各地“甩老族”频现：把爸妈送养老院玩失踪 </a></li>
             </ul>
             <div class="clear"></div>
-     		<div class="page">1 2 3 4 ></div>
+            <div class="page">1 2 3 4 ></div>
         </div>
     </div>
     <div class="fwmain_nleft l mTop10">
-    	<div class="label_head"><div class="label_title">关于我们</div></div>
-    	<div class="label_contents">
-        	<h1><a href="">院所介绍</a></h1>
+        <div class="label_head"><div class="label_title">最新发布</div></div>
+        <div class="label_contents">
+            <h1><a href="">院所介绍</a></h1>
             <h1><a href="">院所荣誉</a></h1>
             <h1><a href="">领导介绍</a></h1>
         </div>
-        <div class="label_head mTop10"><div class="label_title">社会关爱</div></div>
-    	<div class="label_contents">
-        <h1><a href="">慈善活动</a></h1><h1><a href="">社会捐助</a></h1>
-        </div>
-        <div class="label_head mTop10"><div class="label_title">联系我们</div></div>
-    	<div class="label_contents">
-        <ul class="label_pad mTop10">
-            	<div>地 址：XX市XX路XX号10楼</div>
-<div>电 话：000-000000</div>
-<div>传 真：000-000000 </div>
-<div>邮 箱：123456@XX.com</div>
-            </ul>
+        <div class="label_head mTop10"><div class="label_title">最多关注</div></div>
+        <div class="label_contents">
+            <h1><a href="">慈善活动</a></h1><h1><a href="">社会捐助</a></h1>
         </div>
     </div>
     <div class="clear"></div>
 </div>
 <div class="clear"></div>
+
+
 <div class="foot">
     <span>copyright2015-2018 某某养老院版权所有</span>
     <a href="" target="_target" title="Sitemap">网站地图</a>
