--- a/YWL/prolist.html
+++ b/YWL/prolist.html
@@ -1,65 +1,66 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+﻿<!DOCTYPE HTML>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>养老院</title>
-<link href="css/main.css" rel="stylesheet" />
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
-<link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css" media="screen" />
-<script type="text/javascript" src="js/lanrenzhijia.js"></script>
-<script src="js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>益未来</title>
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="bookmark" href="images/favicon.ico"/>
+    <link href="css/main.css" rel="stylesheet"/>
+    <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css" media="screen"/>
+    <script type="text/javascript" src="js/lanrenzhijia.js"></script>
+    <script src="js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
 </head>
-
 <body>
-<!--[if IE 6]>
-    <script type="text/javascript" src="js/DD_belatedPNG.js"></script>
-    <script type="text/javascript">
-    DD_belatedPNG.fix('div.menu ul li,.more');
-    </script>
-<![endif]-->
+
+<!-- 头部-->
 <div class="top">
-	<div class="wt1002">
+    <div class="wt1002">
         <div class="r">
             <div class="toplink">
-               <a href=""onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('');">设为首页</a> | 
-               <a href="javascript:window.external.AddFavorite('','养老院')">加入收藏</a>
+                <a href="">登录</a> |
+                <a href="">注册</a>
             </div>
-            <div class="topsearch">
-                <form action="" method="post" id="form1">
-                    <input type="text" value="" class="tetPut" id="searchnew" name="searchnew" />
-                    <input name="提交" type="submit" class="tetBut" value=""/>
-                </form>
-        	</div>
         </div>
         <div class="l">
-            <a href="/" title="养老院"><img src="images/logo.gif" /></a>
+            <a href="#" title="益未来"><img src="images/logo.gif"/></a>
         </div>
         <div class="clear"></div>
     </div>
 </div>
+<!-- 头部 结束-->
+
+
+<!--导航栏-->
 <div class="menu">
     <div class="wt1002">
-    	<ul id="ulMenu">
+        <ul id="ulMenu">
             <li><a href="index.html">首页</a></li>
+            <li><a href="news.html">新闻动态</a></li>
+            <li><a href="activity.html">专题活动</a></li>
+            <li><a href="join.html">公益招募</a></li>
+            <li><a href="donate.html">乐捐</a></li>
             <li><a href="about.html">关于我们</a></li>
-            <li><a href="list.html">新闻动态</a></li>
-            <li><a href="prolist.html">环境设施</a></li>
-            <li><a href="list.html">多彩生活</a></li>
-            <li><a href="list.html">养老养身</a></li>
-            <li><a href="about.html">联系我们</a></li>
-        </ul>    
-    </div>
-</div>
-<div class="wt1002">
-	<div id="full-screen-slider">
-        <ul id="slides">
-            <li style="background:url('images/1.jpg') no-repeat center top"><a href="/" >关爱老人 关注夕阳</a></li>
-            <li style="background:url('images/2.jpg') no-repeat center top"><a href="/" >人生都有夕阳红 尊老敬老树新风</a></li> 
-            <li style="background:url('images/3.jpg') no-repeat center top"><a href="/" >老有所养</a></li> 
+            <li><a href="contact.html">联系我们</a></li>
         </ul>
     </div>
 </div>
+<!--导航栏结束-->
+
+<!--焦点图-->
+<div class="wt1002">
+    <div id="full-screen-slider">
+        <ul id="slides">
+            <li style="background:url('images/1.jpg') no-repeat center top"><a href="/">益未来-公益创造美好未来</a></li>
+            <li style="background:url('images/2.jpg') no-repeat center top"><a href="/">公益，让未来更美好</a></li>
+            <li style="background:url('images/3.jpg') no-repeat center top"><a href="/">用爱心，致未来</a></li>
+        </ul>
+    </div>
+</div>
+<!--焦点图结束-->
+
+
 <div class="clear"></div>
 <div class="wt1002 fwmain">
 	<div class="fwmain_nright r mTop10">
