--- a/YWL/base.html
+++ b/YWL/base.html
@@ -1,79 +1,157 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>益未来</title>
-    <link rel="shortcut icon" href="images/favicon.ico"/>
-    <link rel="bookmark" href="images/favicon.ico"/>
-    <link href="css/main.css" rel="stylesheet"/>
-    <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css" media="screen"/>
-    <script type="text/javascript" src="js/lanrenzhijia.js"></script>
-    <script src="js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <link href="http://o.qcloud.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <!-- kendo ui css -->
+    <link href="http://o.qcloud.com/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.common.min.css" rel="stylesheet">
+    <link href="http://o.qcloud.com/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.default.min.css" rel="stylesheet">
+    <!-- font-awesome -->
+    <link href="http://o.qcloud.com/static_api/v3/assets/fontawesome/css/font-awesome.css" rel="stylesheet">
+    <!--蓝鲸提供的公用样式库 -->
+    <link href="http://o.qcloud.com/static_api/v3/bk/css/bk.css?v=1.0.1" rel="stylesheet">
+    <!-- 如果要使用Bootstrap的js插件，必须先调入jQuery -->
+    <script src="http://o.qcloud.com/static_api/v3/assets/js/jquery-1.10.2.min.js"></script>
+    <!-- 包括所有bootstrap的js插件或者可以根据需要使用的js插件调用　-->
+    <script src="http://o.qcloud.com/static_api/v3/assets/bootstrap-3.3.4/js/bootstrap.min.js"></script>
+    <!-- 包括所有kendoui的js插件或者可以根据需要使用的js插件调用　-->
+    <script src="http://o.qcloud.com/static_api/v3/assets/kendoui-2015.2.624/js/kendo.all.min.js"></script>
+    <script src="http://o.qcloud.com/static_api/v3/bk/js/bk.js"></script>
+    <!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
+    <!--[if lt IE 9]>
+    <script src="http://o.qcloud.com/static_api/v3/assets/js/html5shiv.min.js"></script>
+    <script src="http://o.qcloud.com/static_api/v3/assets/js/respond.min.js"></script>
+    <![endif]-->
+    <!-- 数据埋点统计 -->
+    <script src="http://o.qcloud.com/static_api/v3/analysis.js"></script>
+    <script src="http://o.qcloud.com/static_api/v3/assets/validate1.14.0/js/jquery.validate.js"></script>
+    <script>
+        $(document).ready(function() {
+            //form4_demo1_js_start
+            /*添加手机号验证方法*/
+            $.validator.addMethod("phone",function(value, element, param){
+                if(/^1\d{10}$/.test(value)){
+                    return true;
+                }
+            });
+            /* 表单验证 */
+            $('#form4_demo1').validate({
+                errorElement: 'span',
+                errorClass: 'text-danger',
+                rules: {
+                    validation_name: {
+                        required: true,
+                        minlength: 2
+                    },
+                    validation_phone: {
+                        required: true,
+                        phone: true
+                    },
+                    validation_email: {
+                        required: true,
+                        email: true
+                    },
+                    validation_password: {
+                        required: true,
+                        minlength: 6
+                    },
+                    validation_password_confirm: {
+                        required: true,
+                        minlength: 6,
+                        equalTo: '#validation_password'
+                    },
+                    validation_date: {
+                        dateISO: true,
+                        required: true
+                    },
+                    validation_select: {
+                        required: true
+                    }
+                },
+                messages: {
+                    validation_name: "请输入姓名(至少两位)",
+                    validation_phone : "手机号必须是11数字，以1开头",
+                    validation_email: "请输入正确邮箱",
+                    validation_password: "密码数不能少于6位",
+                    validation_password_confirm: "两次密码不一致",
+                    validation_date: "日期格式：2000-01-01",
+                    validation_select:"必须选择"
+                }
+            });
+        });
+    </script>
 </head>
 <body>
-
-<!-- 头部-->
-<div class="top">
-    <div class="wt1002">
-        <div class="r">
-            <div class="toplink">
-                <a href="">登录</a> |
-                <a href="">注册</a>
+<div>欢迎使用Magic Box</div>
+<form class="form-horizontal" action="index.html" id="form4_demo1">
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_name">用户名</label>
+        <div class="col-sm-7">
+            <input class="form-control" id="validation_name" name="validation_name" placeholder="用户名" type="text">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_email">邮箱</label>
+        <div class="col-sm-7">
+            <input class="form-control" id="validation_email" name="validation_email" placeholder="邮箱" type="text">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_phone">手机号</label>
+        <div class="col-sm-7">
+            <input class="form-control" id="validation_phone" name="validation_phone" placeholder="手机号" type="text" maxlength="11">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_password">密码</label>
+        <div class="col-sm-7">
+            <input class="form-control" id="validation_password" name="validation_password" placeholder="密码" type="password">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_password_confirm">确认密码</label>
+        <div class="col-sm-7">
+            <input class="form-control" id="validation_password_confirm" name="validation_password_confirm" placeholder="确认密码" type="password">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_date">出生年月</label>
+        <div class="col-sm-7">
+            <input class="form-control" data-mask="9999-99-99" id="validation_date" name="validation_date" placeholder="YYYY-MM-DD" type="text">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_select">下拉选项</label>
+        <div class="col-sm-7">
+            <select class="form-control" id="validation_select" name="validation_select">
+                <option></option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_select"></label>
+        <div class="col-sm-7">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" checked="true">已阅读并同意相关条款</label>
             </div>
         </div>
-        <div class="l">
-            <a href="#" title="益未来"><img src="images/logo.gif"/></a>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="validation_select"></label>
+        <div class="col-sm-7">
+            <button class="king-btn king-info" type="submit" id="btn-validate">提交</button>
         </div>
-        <div class="clear"></div>
     </div>
-</div>
-<!-- 头部 结束-->
-
-
-<!--导航栏-->
-<div class="menu">
-    <div class="wt1002">
-        <ul id="ulMenu">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="news.html">新闻动态</a></li>
-            <li><a href="activity.html">专题活动</a></li>
-            <li><a href="join.html">公益招募</a></li>
-            <li><a href="donate.html">乐捐</a></li>
-            <li><a href="about.html">关于我们</a></li>
-            <li><a href="contact.html">联系我们</a></li>
-        </ul>
-    </div>
-</div>
-<!--导航栏结束-->
-
-<!--焦点图-->
-<div class="wt1002">
-    <div id="full-screen-slider">
-        <ul id="slides">
-            <li style="background:url('images/1.jpg') no-repeat center top"><a href="/">益未来-公益创造美好未来</a></li>
-            <li style="background:url('images/2.jpg') no-repeat center top"><a href="/">公益，让未来更美好</a></li>
-            <li style="background:url('images/3.jpg') no-repeat center top"><a href="/">用爱心，致未来</a></li>
-        </ul>
-    </div>
-</div>
-<!--焦点图结束-->
-
-<!-- 当前导航栏-->
-<div style="display: none" class="current_name">
-    <p>首页</p>
-</div>
-<!-- 当前导航栏 结束-->
-
-
-<!--网站页脚-->
-<div class="foot">
-    <span>copyright2015-2016 </span>
-    <a href="" target="_target" title="Sitemap">网站地图</a>
-    <a href="" target="_target" title="后台登录">后台登录</a>
-</div>
-<!--网站页脚 结束-->
+</form>
+<!-- 表单验证(Validate)-1 End -->
+<!--JS-->
 
 </body>
 </html>
