--- a/DingCan/login.html
+++ b/DingCan/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form method="get" action="select.php">
-        <input type="text">
+        <input type="text" name="id">
         <input type="submit" value="提交">
     </form>
 </body>
