--- a/NewWebsite/edit.html
+++ b/NewWebsite/edit.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script>
-        $('#editor').wysiwyg();
-
-    </script>
 </head>
 <body>
 <div class="container">
@@ -23,19 +19,25 @@
     </div>
     <div style="margin-top: 20px;">
         <form class="form-inline" role="form">
-            <div class="input-group">
-                <div class="input-group-addon">标题：</div>
-                <input type="text" class="form-control">
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">标题：</div>
+                    <input type="text" class="form-control">
+                </div>
             </div>
             <br/>
             <br/>
-            <div class="input-group">
-                <div class="input-group-addon">日期：</div>
-                <input class="form-control" type="date" placeholder="date">
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">日期：</div>
+                    <input class="form-control" type="date" placeholder="date">
+                </div>
             </div>
-            <div class="input-group">
-                <div class="input-group-addon">时间：</div>
-                <input class="form-control" type="time" placeholder="time">
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">时间：</div>
+                    <input class="form-control" type="time" placeholder="time">
+                </div>
             </div>
             <br/>
             <br/>
