--- a/HomeWork/index.html
+++ b/HomeWork/index.html
@@ -124,28 +124,13 @@
                     <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> 首页</a>
                 </li>
                 <li>
-                    <a href="tables.html"><i class="fa fa-fw fa-table"></i> 表格</a>
+                    <a href="tables.html"><i class="fa fa-fw fa-table"></i>所有任务</a>
                 </li>
                 <li>
-                    <a href="forms.html"><i class="fa fa-fw fa-edit"></i> 表单</a>
+                    <a href="forms.html"><i class="fa fa-fw fa-edit"></i>发布任务</a>
                 </li>
                 <li>
-                    <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> 排版</a>
-                </li>
-                <li>
-                    <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap 布局</a>
-                </li>
-                <li>
-                    <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i
-                            class="fa fa-fw fa-arrows-v"></i> 下拉菜单 <i class="fa fa-fw fa-caret-down"></i></a>
-                    <ul id="demo" class="collapse">
-                        <li>
-                            <a href="javascript:;">子菜单1 </a>
-                        </li>
-                        <li>
-                            <a href="javascript:;">子菜单2</a>
-                        </li>
-                    </ul>
+                    <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i>任务管理</a>
                 </li>
             </ul>
         </div>
